# text-editor-v2

./: .gitignore  MIGRATION_PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
docs/: FEATURE_PLAN.md
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.online.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/windows/: installer.nsh
src/components/: CmEditor.tsx  CommandPalette.tsx  ContextMenu.tsx  DiffEditor.tsx  EditorHelp.tsx  FindReplace.tsx  MarkdownPreview.tsx  MarkdownReader.tsx  Minimap.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  ThemeEditor.tsx  TitleBar.tsx  Toolbar.tsx
src/hooks/: useEditorStatePool.ts  useEditorStore.ts  useFileOpener.ts
src/utils/: autocomplete.ts  bracketColorization.ts  cmCommands.ts  hover.ts  indentGuides.ts  languageExtensions.ts  lint.ts  perf.ts  signatureHelp.ts  slugify.ts  themeDefaults.ts  themeInjector.ts  themeResolver.ts  themes.ts  unicodeHighlight.ts
