[package]
name = "text-editor"
version = "1.0.0"
description = "A multi-functional text editor built with Tauri"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "text_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
chardetng = "1"
memmap2 = "0.9.10"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2"

[target."cfg(windows)".dependencies]
winreg = "0.56.0"
